--- a/404.html
+++ b/404.html
@@ -8,7 +8,6 @@
 <link rel="preconnect" href="https://cdn.tailwindcss.com">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 <!-- 🛡 Security Headers -->
 <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.tailwindcss.com https://unpkg.com https://www.google.com https://www.gstatic.com; style-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com https://fonts.googleapis.com; img-src 'self' data:; font-src 'self' https://fonts.gstatic.com; frame-src https://www.google.com; form-action 'self' https://formspree.io; object-src 'none'; base-uri 'self';">
 <meta http-equiv="X-Content-Type-Options" content="nosniff">
@@ -17,7 +16,9 @@
 <meta http-equiv="Permissions-Policy" content="accelerometer=(), camera=(), geolocation=(), microphone=()">
 <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, max-age=0">
 
+
   <link rel="icon" type="image/x-icon" href="/assets/favicon.png">
+
   <style>
     body {
       background: #f4e1c1;
@@ -30,13 +31,16 @@
       max-width: 300px;
       height: auto;
       margin: 2rem auto;
+    }
     h1 {
       font-size: 2rem;
       color: #444;
+    }
     p {
       font-size: 1.1rem;
       margin: 1rem auto;
       max-width: 600px;
+    }
     a {
       display: inline-block;
       margin-top: 1.5rem;
@@ -46,9 +50,11 @@
       text-decoration: none;
       font-weight: bold;
       border-radius: 5px;
+    }
   </style>
 </head>
-<body class="flex flex-col min-h-screen bg-offWhite text-armadilloGray font-inter">
+
+<body>
   <img src="/assets/404Dillo.png" alt="Dizzy Armadillo - Couldn't Find This Burrow">
   <h1>404 – Couldn't Find This Burrow</h1>
   <p>Looks like the page you're digging for doesn't exist. Maybe it got buried, maybe it never existed at all. No worries—Iron Dillo is on the trail.</p>
