--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,6 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <!-- 🛡 Security Headers -->
 <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.tailwindcss.com https://unpkg.com https://www.google.com https://www.gstatic.com; style-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com https://fonts.googleapis.com; img-src 'self' data:; font-src 'self' https://fonts.gstatic.com; frame-src https://www.google.com; form-action 'self' https://formspree.io; object-src 'none'; base-uri 'self';">
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 <meta http-equiv="X-Content-Type-Options" content="nosniff">
 <meta http-equiv="X-Frame-Options" content="DENY">
 <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
@@ -28,72 +27,115 @@
   <meta property="og:image" content="https://irondillo.com/assets/irondillo-preview.png" />
   <meta property="og:url" content="https://irondillo.com/blog.html" />
   <meta name="twitter:card" content="summary_large_image" />
+
   <!-- Tailwind CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
-<script>
- tailwind.config = { theme: { extend: { colors: { armadilloBlack: "#1A1A1A", armadilloGray: "#4A4A4A", oliveGreen: "#6B7B3C", oliveDark: "#55622F", offWhite: "#F8F9FA" }, fontFamily: { inter: ["Inter", "sans-serif"] } } } };
-</script>
   <style>
     @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
     .fade-in { animation: fadeIn 1s ease-out both; }
   </style>
 </head>
-<body class="flex flex-col min-h-screen bg-offWhite text-armadilloGray font-inter">
+
+<body class="bg-gray-900 text-gray-100 font-sans flex flex-col min-h-screen">
+
   <!-- Header with logo and nav -->
   <header class="p-8 text-center max-w-3xl mx-auto fade-in">
     <img loading="lazy" src="/assets/irondillo-preview.png" alt="IronDillo Logo" class="mx-auto w-32 mb-6" />
-    <h1 class="text-4xl font-extrabold text-oliveGreen mb-4">Iron Dillo Blog</h1>
-    <nav class="bg-armadilloGray py-3 rounded-md mb-8 max-w-xl mx-auto">
+    <h1 class="text-4xl font-extrabold text-teal-400 mb-4">Iron Dillo Blog</h1>
+
+    <nav class="bg-gray-800 py-3 rounded-md mb-8 max-w-xl mx-auto">
       <div class="flex justify-between">
-        <a href="/index.html" class="text-oliveGreen font-semibold hover:underline px-4 tracking-wide uppercase">Home</a>
-        <a href="/services.html" class="text-oliveGreen font-semibold hover:underline px-4 tracking-wide uppercase">Services</a>
-        <a href="/about.html" class="text-oliveGreen font-semibold hover:underline px-4 tracking-wide uppercase">About</a>
-        <a href="/blog.html" class="text-oliveGreen font-semibold hover:underline px-4 tracking-wide uppercase">Blog</a>
-        <a href="/contact.html" class="text-oliveGreen font-semibold hover:underline px-4 tracking-wide uppercase">Contact</a>
+        <a href="/index.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Home</a>
+        <a href="/services.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Services</a>
+        <a href="/about.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">About</a>
+        <a href="/blog.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Blog</a>
+        <a href="/contact.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Contact</a>
       </div>
     </nav>
-    <p class="text-armadilloGray max-w-xl mx-auto">
+
+    <p class="text-gray-300 max-w-xl mx-auto">
       Cybersecurity guidance, digital hygiene tips, and insights for real people and small businesses.
     </p>
   </header>
+
   <!-- Blog Posts Grid -->
  <main class="max-w-6xl mx-auto px-4 pb-20 grid gap-10 md:grid-cols-2 lg:grid-cols-3">
-  <article class="bg-armadilloGray rounded-lg overflow-hidden shadow-lg">
+
+  <article class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
     <img loading="lazy" src="/assets/thumb-safer-online.jpg" alt="5 Ways to Stay Safer Online" class="w-full h-auto" />
     <div class="p-6">
-      <h2 class="text-xl font-bold text-oliveGreen mb-1">
+      <h2 class="text-xl font-bold text-teal-300 mb-1">
         <a href="/posts/safer-online-now.html">5 Ways to Stay Safer Online Right Now</a>
       </h2>
-      <p class="text-armadilloGray text-xs mb-3">Published: July 15, 2025</p>
-      <p class="text-armadilloGray text-sm">Quick, actionable cybersecurity advice for real people and small businesses. Start here.</p>
+      <p class="text-gray-400 text-xs mb-3">Published: July 15, 2025</p>
+      <p class="text-gray-300 text-sm">Quick, actionable cybersecurity advice for real people and small businesses. Start here.</p>
     </div>
   </article>
+
+  <article class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
     <img loading="lazy" src="/assets/thumb-tech-support.png" alt="Tech Support Scam" class="w-full h-auto" />
+    <div class="p-6">
+      <h2 class="text-xl font-bold text-teal-300 mb-1">
         <a href="/posts/tech-support-scam-warning.html">How to Tell If That Tech Support Call Is a Scam</a>
-      <p class="text-armadilloGray text-xs mb-3">Published: July 10, 2025</p>
-      <p class="text-armadilloGray text-sm">Don’t get tricked by cold-callers claiming your account was hacked. Learn how to spot the red flags.</p>
+      </h2>
+      <p class="text-gray-400 text-xs mb-3">Published: July 10, 2025</p>
+      <p class="text-gray-300 text-sm">Don’t get tricked by cold-callers claiming your account was hacked. Learn how to spot the red flags.</p>
+    </div>
+  </article>
+
+  <article class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
     <img loading="lazy" src="/assets/thumb-wordpress.jpg" alt="WordPress Security" class="w-full h-auto" />
+    <div class="p-6">
+      <h2 class="text-xl font-bold text-teal-300 mb-1">
         <a href="/posts/wordpress-security-basics.html">Basic WordPress Security for Beginners</a>
-      <p class="text-armadilloGray text-xs mb-3">Published: July 5, 2025</p>
-      <p class="text-armadilloGray text-sm">WordPress makes it easy to launch a site, but simplicity comes with security risks.</p>
+      </h2>
+      <p class="text-gray-400 text-xs mb-3">Published: July 5, 2025</p>
+      <p class="text-gray-300 text-sm">WordPress makes it easy to launch a site, but simplicity comes with security risks.</p>
+    </div>
+  </article>
+
+  <article class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
     <img loading="lazy" src="/assets/thumb-tools.jpg" alt="Free Tools I Trust" class="w-full h-auto" />
+    <div class="p-6">
+      <h2 class="text-xl font-bold text-teal-300 mb-1">
         <a href="/posts/free-tools-i-trust.html">Free Tools I Trust</a>
-      <p class="text-armadilloGray text-xs mb-3">Published: June 30, 2025</p>
-      <p class="text-armadilloGray text-sm">Not every cybersecurity tool costs money—or your sanity.</p>
+      </h2>
+      <p class="text-gray-400 text-xs mb-3">Published: June 30, 2025</p>
+      <p class="text-gray-300 text-sm">Not every cybersecurity tool costs money—or your sanity.</p>
+    </div>
+  </article>
+
+  <article class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
     <img loading="lazy" src="/assets/thumb-ports.png" alt="Open Ports Explained" class="w-full h-48 object-cover" />
+    <div class="p-6">
+      <h2 class="text-xl font-bold text-teal-300 mb-1">
         <a href="/posts/closing-ports-backdoors.html">Are Open Ports a Backdoor?</a>
-      <p class="text-armadilloGray text-xs mb-3">Published: June 25, 2025</p>
-      <p class="text-armadilloGray text-sm">Open ports are like doors into your system. Some are needed. Some aren't.</p>
+      </h2>
+      <p class="text-gray-400 text-xs mb-3">Published: June 25, 2025</p>
+      <p class="text-gray-300 text-sm">Open ports are like doors into your system. Some are needed. Some aren't.</p>
+    </div>
+  </article>
+
+  <article class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
     <img loading="lazy" src="/assets/thumb-rural.jpg" alt="Rural Cybersecurity" class="w-full h-auto" />
+    <div class="p-6">
+      <h2 class="text-xl font-bold text-teal-300 mb-1">
         <a href="/posts/rural-cybersecurity.html">Why Rural Businesses Can’t Ignore Cybersecurity</a>
-      <p class="text-armadilloGray text-xs mb-3">Published: June 20, 2025</p>
-      <p class="text-armadilloGray text-sm">When folks think about hackers, they picture big cities. That’s a mistake.</p>
+      </h2>
+      <p class="text-gray-400 text-xs mb-3">Published: June 20, 2025</p>
+      <p class="text-gray-300 text-sm">When folks think about hackers, they picture big cities. That’s a mistake.</p>
+    </div>
+  </article>
+
 </main>
+
+
   <!-- Footer -->
-  <footer class="bg-armadilloGray text-armadilloGray text-center p-6 text-sm mt-auto max-w-3xl mx-auto rounded-md">
+  <footer class="bg-gray-800 text-gray-500 text-center p-6 text-sm mt-auto max-w-3xl mx-auto rounded-md">
     &copy; 2025 Iron Dillo. All rights reserved. |
-    <a href="/privacy.html" class="hover:underline text-oliveGreen">Privacy</a> |
-    <a href="/terms.html" class="hover:underline text-oliveGreen">Terms</a>
+    <a href="/privacy.html" class="hover:underline text-teal-400">Privacy</a> |
+    <a href="/terms.html" class="hover:underline text-teal-400">Terms</a>
   </footer>
+
 </body>
 </html>
