--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,6 @@
 <link rel="preconnect" href="https://cdn.tailwindcss.com">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 <!-- 🛡 Security Headers -->
 <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.tailwindcss.com https://unpkg.com https://www.google.com https://www.gstatic.com; style-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com https://fonts.googleapis.com; img-src 'self' data:; font-src 'self' https://fonts.gstatic.com; frame-src https://www.google.com; form-action 'self' https://formspree.io; object-src 'none'; base-uri 'self';">
 <meta http-equiv="X-Content-Type-Options" content="nosniff">
@@ -19,33 +18,34 @@
   
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
-<script>
- tailwind.config = { theme: { extend: { colors: { armadilloBlack: "#1A1A1A", armadilloGray: "#4A4A4A", oliveGreen: "#6B7B3C", oliveDark: "#55622F", offWhite: "#F8F9FA" }, fontFamily: { inter: ["Inter", "sans-serif"] } } } };
-</script>
+  
   <!-- Google reCAPTCHA v2 -->
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
-<body class="flex flex-col min-h-screen bg-offWhite text-armadilloGray font-inter">
+<body class="bg-gray-900 text-gray-100 min-h-screen flex flex-col font-sans">
 
   <!-- Header -->
   <header class="text-center pt-8 max-w-3xl mx-auto">
     <img loading="lazy" src="/assets/irondillo-preview.png" alt="IronDillo cybersecurity logo" class="mx-auto mb-6 w-36 h-auto" />
   </header>
+
   <!-- Navigation -->
-  <nav class="bg-armadilloGray py-3 rounded-md mb-8 max-w-xl mx-auto">
+  <nav class="bg-gray-800 py-3 rounded-md mb-8 max-w-xl mx-auto">
     <div class="flex justify-between">
-      <a href="/index.html" class="text-oliveGreen font-semibold hover:underline px-4 tracking-wide uppercase">Home</a>
-      <a href="/services.html" class="text-oliveGreen font-semibold hover:underline px-4 tracking-wide uppercase">Services</a>
-      <a href="/about.html" class="text-oliveGreen font-semibold hover:underline px-4 tracking-wide uppercase">About</a>
-      <a href="/contact.html" class="text-oliveGreen font-semibold hover:underline px-4 tracking-wide uppercase">Contact</a>
+      <a href="/index.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Home</a>
+      <a href="/services.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Services</a>
+      <a href="/about.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">About</a>
+      <a href="/contact.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Contact</a>
     </div>
   </nav>
+
   <!-- Main Contact Form -->
-  <main class="flex-grow max-w-xl w-full bg-armadilloGray rounded-lg p-8 shadow-lg mx-auto">
-    <h1 class="text-4xl font-extrabold text-oliveGreen mb-6 text-center">Contact Iron Dillo</h1>
-    <p class="text-armadilloGray mb-8 text-center">
+  <main class="flex-grow max-w-xl w-full bg-gray-800 rounded-lg p-8 shadow-lg mx-auto">
+    <h1 class="text-4xl font-extrabold text-teal-400 mb-6 text-center">Contact Iron Dillo</h1>
+    <p class="text-gray-300 mb-8 text-center">
       Have a cybersecurity question? Want to schedule a consult? Fill out the form below and I’ll respond as soon as possible.
     </p>
+
     <form
       id="contact-form"
       action="https://formspree.io/f/xldnbpdg"
@@ -58,48 +58,67 @@
         <label for="gotcha">Leave this empty</label>
         <input type="text" name="_gotcha" id="gotcha" autocomplete="off" />
       </div>
+
       <div>
-        <label for="name" class="block mb-2 font-semibold text-oliveGreen">Your Name</label>
+        <label for="name" class="block mb-2 font-semibold text-teal-400">Your Name</label>
         <input
           type="text"
           name="name"
           id="name"
           required
-          class="w-full p-3 rounded bg-armadilloBlack border border-armadilloGray text-offWhite focus:outline-none focus:ring-2 focus:ring-oliveGreen"
+          class="w-full p-3 rounded bg-gray-900 border border-gray-700 text-gray-100 focus:outline-none focus:ring-2 focus:ring-teal-400"
           placeholder="Jane Doe"
           autocomplete="name"
         />
-        <label for="email" class="block mb-2 font-semibold text-oliveGreen">Your Email</label>
+      </div>
+
+      <div>
+        <label for="email" class="block mb-2 font-semibold text-teal-400">Your Email</label>
+        <input
           type="email"
           name="_replyto"
           id="email"
+          required
+          class="w-full p-3 rounded bg-gray-900 border border-gray-700 text-gray-100 focus:outline-none focus:ring-2 focus:ring-teal-400"
           placeholder="you@example.com"
           autocomplete="email"
-        <label for="message" class="block mb-2 font-semibold text-oliveGreen">Message</label>
+        />
+      </div>
+
+      <div>
+        <label for="message" class="block mb-2 font-semibold text-teal-400">Message</label>
         <textarea
           name="message"
           id="message"
           rows="5"
+          required
+          class="w-full p-3 rounded bg-gray-900 border border-gray-700 text-gray-100 focus:outline-none focus:ring-2 focus:ring-teal-400"
           placeholder="Write your message here..."
         ></textarea>
+      </div>
+
       <!-- reCAPTCHA -->
       <div class="g-recaptcha" data-sitekey="6LdCtosrAAAAAGddw60skAwbV91b2UmEAuLaSLYb"></div>
+
       <!-- Optional Redirect -->
       <input type="hidden" name="_next" value="/thank-you.html" />
+
       <button
         type="submit"
-        class="w-full mt-4 bg-oliveGreen text-armadilloBlack font-extrabold py-3 rounded hover:bg-oliveGreen transition-colors duration-200"
+        class="w-full mt-4 bg-teal-400 text-gray-900 font-extrabold py-3 rounded hover:bg-teal-500 transition-colors duration-200"
       >
         Send Message
       </button>
     </form>
   </main>
+
   <!-- Footer -->
-  <footer class="bg-armadilloGray text-armadilloGray text-center p-6 mt-8 text-sm max-w-3xl mx-auto rounded-md">
+  <footer class="bg-gray-800 text-gray-500 text-center p-6 mt-8 text-sm max-w-3xl mx-auto rounded-md">
     &copy; 2025 Iron Dillo. All rights reserved. | Veteran-Owned | 
-    <a href="/privacy.html" class="hover:underline text-oliveGreen">Privacy</a> | 
-    <a href="/terms.html" class="hover:underline text-oliveGreen">Terms</a>
+    <a href="/privacy.html" class="hover:underline text-teal-400">Privacy</a> | 
+    <a href="/terms.html" class="hover:underline text-teal-400">Terms</a>
   </footer>
+
   <script>
     // Prevent form submit if reCAPTCHA not verified
     function onSubmit(event) {
