--- a/maintenance.html
+++ b/maintenance.html
@@ -6,7 +6,6 @@
   <link rel="preconnect" href="https://cdn.tailwindcss.com">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 
   <!-- 🛡 Security Headers -->
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.tailwindcss.com https://unpkg.com https://www.google.com https://www.gstatic.com; style-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com https://fonts.googleapis.com; img-src 'self' data:; font-src 'self' https://fonts.gstatic.com; frame-src https://www.google.com; form-action 'self' https://formspree.io; object-src 'none'; base-uri 'self';">
@@ -16,11 +15,9 @@
   <meta http-equiv="Permissions-Policy" content="accelerometer=(), camera=(), geolocation=(), microphone=()">
   <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, max-age=0">
   <link rel="icon" type="image/x-icon" href="/assets/favicon.png" />
+
   <title>Iron Dillo | Cyberstasis Mode</title>
   <script src="https://cdn.tailwindcss.com"></script>
-<script>
- tailwind.config = { theme: { extend: { colors: { armadilloBlack: "#1A1A1A", armadilloGray: "#4A4A4A", oliveGreen: "#6B7B3C", oliveDark: "#55622F", offWhite: "#F8F9FA" }, fontFamily: { inter: ["Inter", "sans-serif"] } } } };
-</script>
   <style>
     @keyframes matrixScroll {
       0% { transform: translateY(100%); opacity: 0; }
@@ -35,9 +32,11 @@
       font-family: monospace;
       text-shadow: 0 0 5px #00ff00;
       opacity: 0.8;
+    }
   </style>
 </head>
-<body class="flex flex-col min-h-screen bg-offWhite text-armadilloGray font-inter">
+<body class="relative h-screen w-screen bg-black text-white overflow-hidden">
+
   <!-- Scrolling Matrix Text -->
   <div class="absolute z-20 w-full h-full flex flex-col items-center justify-center space-y-4 overflow-hidden">
     <div class="h-full w-64 relative">
@@ -52,6 +51,7 @@
       </div>
     </div>
   </div>
+
   <!-- Center Message -->
   <div class="absolute z-30 inset-0 flex items-center justify-center">
     <div class="text-center px-6 py-4 bg-black bg-opacity-30 rounded-2xl shadow-lg">
@@ -60,5 +60,8 @@
         Iron Dillo is currently in maintenance mode.<br />
         Please check back soon.
       </p>
+    </div>
+  </div>
+
 </body>
 </html>
