--- a/thank-you.html
+++ b/thank-you.html
@@ -6,36 +6,37 @@
   <title>Thank You | Iron Dillo Cybersecurity</title>
   <link rel="icon" type="image/x-icon" href="/assets/favicon.png" />
   <script src="https://cdn.tailwindcss.com"></script>
-<script>
- tailwind.config = { theme: { extend: { colors: { armadilloBlack: "#1A1A1A", armadilloGray: "#4A4A4A", oliveGreen: "#6B7B3C", oliveDark: "#55622F", offWhite: "#F8F9FA" }, fontFamily: { inter: ["Inter", "sans-serif"] } } } };
-</script>
 </head>
-<body class="flex flex-col min-h-screen bg-offWhite text-armadilloGray font-inter">
+<body class="bg-gray-900 text-gray-100 min-h-screen flex flex-col font-sans">
 
   <!-- Header -->
   <header class="text-center pt-8 max-w-3xl mx-auto">
     <img src="/assets/irondillo-preview.png" alt="IronDillo cybersecurity logo" class="mx-auto mb-6 w-36 h-auto" />
   </header>
+
   <!-- Navigation -->
-  <nav class="bg-armadilloGray py-3 rounded-md mb-8 max-w-xl mx-auto">
+  <nav class="bg-gray-800 py-3 rounded-md mb-8 max-w-xl mx-auto">
     <div class="flex justify-between">
-      <a href="/index.html" class="text-oliveGreen font-semibold hover:underline px-4 tracking-wide uppercase">Home</a>
-      <a href="/services.html" class="text-oliveGreen font-semibold hover:underline px-4 tracking-wide uppercase">Services</a>
-      <a href="/about.html" class="text-oliveGreen font-semibold hover:underline px-4 tracking-wide uppercase">About</a>
-      <a href="/contact.html" class="text-oliveGreen font-semibold hover:underline px-4 tracking-wide uppercase">Contact</a>
+      <a href="/index.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Home</a>
+      <a href="/services.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Services</a>
+      <a href="/about.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">About</a>
+      <a href="/contact.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Contact</a>
     </div>
   </nav>
+
   <!-- Message -->
-  <main class="flex-grow max-w-xl w-full bg-armadilloGray rounded-lg p-8 shadow-lg mx-auto text-center">
-    <h1 class="text-4xl font-extrabold text-oliveGreen mb-6">Thank You!</h1>
-    <p class="text-armadilloGray mb-8">Your message has been successfully sent. I'll get back to you soon.</p>
-    <a href="/index.html" class="text-oliveGreen hover:underline">Return to Home</a>
+  <main class="flex-grow max-w-xl w-full bg-gray-800 rounded-lg p-8 shadow-lg mx-auto text-center">
+    <h1 class="text-4xl font-extrabold text-teal-400 mb-6">Thank You!</h1>
+    <p class="text-gray-300 mb-8">Your message has been successfully sent. I'll get back to you soon.</p>
+    <a href="/index.html" class="text-teal-400 hover:underline">Return to Home</a>
   </main>
+
   <!-- Footer -->
-  <footer class="bg-armadilloGray text-armadilloGray text-center p-6 mt-8 text-sm max-w-3xl mx-auto rounded-md">
+  <footer class="bg-gray-800 text-gray-500 text-center p-6 mt-8 text-sm max-w-3xl mx-auto rounded-md">
     &copy; 2025 Iron Dillo. All rights reserved. | Veteran-Owned |
-    <a href="/privacy.html" class="hover:underline text-oliveGreen">Privacy</a> |
-    <a href="/terms.html" class="hover:underline text-oliveGreen">Terms</a>
+    <a href="/privacy.html" class="hover:underline text-teal-400">Privacy</a> |
+    <a href="/terms.html" class="hover:underline text-teal-400">Terms</a>
   </footer>
+
 </body>
 </html>
