Fix HTML issues and apply brand palette

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8" />
 <title>Iron Dillo Cybersecurity – Veteran-Owned Online Protection</title>
 
+<script>
   // Set this to false to disable maintenance mode
   const maintenanceMode = true;
 
@@ -27,6 +28,7 @@
 <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, max-age=0">
 <link rel="icon" href="/assets/favicon.png" />
 <script src="https://cdn.tailwindcss.com"></script>
+<script>
   tailwind.config = {
     theme: {
       extend: {
