--- a/thank-you.html
+++ b/thank-you.html
@@ -6,6 +6,7 @@
   <title>Thank You | Iron Dillo Cybersecurity</title>
   <link rel="icon" type="image/x-icon" href="/assets/favicon.png" />
   <script src="https://cdn.tailwindcss.com"></script>
+<script>
   tailwind.config = {
     theme: {
       extend: {
