--- a/maintenance.html
+++ b/maintenance.html
@@ -44,7 +44,7 @@
 
   <!-- Maintenance Content -->
   <div class="text-center p-8 max-w-md fade-in">
-    <img src="/assets/IronDilloLogo.png" alt="Iron Dillo Logo" class="mx-auto mb-6 w-28" />
+    <img src="assets/irondillo-preview.png" alt="Iron Dillo Logo" class="mx-auto mb-6 w-28" />
     <h1 class="text-4xl font-bold text-armadilloBlack mb-4">Iron Dillo Cybersecurity</h1>
     
     <p class="text-lg text-armadilloGray mb-6 leading-relaxed">
