Apply light theme across site to match maintenance page

--- a/blog.html
+++ b/blog.html
@@ -54,7 +54,7 @@
   </style>
 </head>
 
-<body class="bg-armadilloBlack text-offWhite font-inter flex flex-col min-h-screen">
+<body class="bg-offWhite text-armadilloGray font-inter flex flex-col min-h-screen">
 
   <!-- Header with logo and nav -->
   <header class="p-8 text-center max-w-3xl mx-auto fade-in">
