--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
   <!-- Google reCAPTCHA v2 -->
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
-<body class="bg-armadilloBlack text-offWhite min-h-screen flex flex-col font-inter">
+<body class="bg-offWhite text-armadilloGray min-h-screen flex flex-col font-inter">
 
   <!-- Header -->
   <header class="text-center pt-8 max-w-3xl mx-auto">
