--- a/lindale-tyler-cybersecurity.html
+++ b/lindale-tyler-cybersecurity.html
@@ -48,7 +48,7 @@
     .fade-in { animation: fadeIn 1s ease-out both; }
   </style>
 </head>
-<body class="flex flex-col min-h-screen bg-armadilloBlack text-offWhite font-inter">
+<body class="flex flex-col min-h-screen bg-offWhite text-armadilloGray font-inter">
 
   <!-- Logo Header -->
   <header class="text-center pt-8 max-w-3xl mx-auto fade-in">
@@ -97,12 +97,12 @@
     </section>
 
     <section class="bg-armadilloBlack py-12 text-center">
-      <h2 class="text-2xl font-bold text-white mb-4">Protect Your Lindale or Tyler Business</h2>
+      <h2 class="text-2xl font-bold text-armadilloBlack mb-4">Protect Your Lindale or Tyler Business</h2>
       <p class="text-armadilloGray max-w-xl mx-auto">
         Let's secure your operations so you can focus on growing your business. Get in touch for a free consultation
         and find out how Iron Dillo can defend your organization.
       </p>
-      <a href="/contact.html" class="mt-6 inline-block bg-oliveGreen text-white px-6 py-3 rounded-lg shadow-lg hover:bg-oliveDark transition">Contact Me Today</a>
+      <a href="/contact.html" class="mt-6 inline-block bg-oliveGreen text-armadilloBlack px-6 py-3 rounded-lg shadow-lg hover:bg-oliveDark transition">Contact Me Today</a>
     </section>
   </main>
 
