--- a/terms.html
+++ b/terms.html
@@ -37,7 +37,7 @@
   };
 </script>
 </head>
-<body class="flex flex-col min-h-screen bg-armadilloBlack text-offWhite font-inter">
+<body class="flex flex-col min-h-screen bg-offWhite text-armadilloGray font-inter">
 
   <!-- Logo Header -->
   <header class="text-center pt-8">
