--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
     .fade-in { animation: fadeIn 1s ease-out both; }
   </style>
 </head>
-<body class="flex flex-col min-h-screen bg-armadilloBlack text-offWhite font-inter">
+<body class="flex flex-col min-h-screen bg-offWhite text-armadilloGray font-inter">
 
   <!-- Header -->
   <header class="text-center pt-8 max-w-3xl mx-auto fade-in">
@@ -100,7 +100,7 @@
     <section class="bg-armadilloGray rounded-lg shadow-lg p-8">
       <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Commitment to Professional Ethics</h2>
       <p class="text-armadilloGray leading-relaxed">
-        As a member of <span class="font-semibold text-white">ISC2</span>, I keep their 
+        As a member of <span class="font-semibold text-armadilloBlack">ISC2</span>, I keep their 
         <a href="https://www.isc2.org/Ethics" target="_blank" class="text-oliveGreen hover:underline">
           Code of Ethics
         </a> close to heart in this work. 
@@ -131,12 +131,12 @@
 
     <!-- Call to Action -->
     <section class="bg-armadilloBlack py-12 text-center">
-      <h2 class="text-2xl font-bold text-white mb-4">Ready to Secure Your Business</h2>
+      <h2 class="text-2xl font-bold text-armadilloBlack mb-4">Ready to Secure Your Business</h2>
       <p class="text-armadilloGray max-w-xl mx-auto">
         Iron Dillo Cybersecurity is here to provide straightforward, hands-on support for East Texas 
         individuals and businesses. Let’s talk about the right plan for your needs.
       </p>
-      <a href="/contact.html" class="mt-6 inline-block bg-oliveGreen text-white px-6 py-3 rounded-lg shadow-lg hover:bg-oliveDark transition">
+      <a href="/contact.html" class="mt-6 inline-block bg-oliveGreen text-armadilloBlack px-6 py-3 rounded-lg shadow-lg hover:bg-oliveDark transition">
         Contact Me Today
       </a>
     </section>
