--- a/services.html
+++ b/services.html
@@ -40,7 +40,7 @@
     .fade-in { animation: fadeIn 1s ease-out both; }
   </style>
 </head>
-<body class="flex flex-col min-h-screen bg-armadilloBlack text-offWhite font-inter">
+<body class="flex flex-col min-h-screen bg-offWhite text-armadilloGray font-inter">
 
   <!-- Logo Header -->
   <header class="text-center pt-8 max-w-3xl mx-auto fade-in">
