--- a/thank-you.html
+++ b/thank-you.html
@@ -24,7 +24,7 @@
   };
 </script>
 </head>
-<body class="bg-armadilloBlack text-offWhite min-h-screen flex flex-col font-inter">
+<body class="bg-offWhite text-armadilloGray min-h-screen flex flex-col font-inter">
 
   <!-- Header -->
   <header class="text-center pt-8 max-w-3xl mx-auto">
