--- a/lindale-tyler-cybersecurity.html
+++ b/lindale-tyler-cybersecurity.html
@@ -7,42 +7,38 @@
   <meta name="keywords" content="Lindale Texas cybersecurity, Tyler Texas cyber defense, East Texas IT security, small business cybersecurity" />
   <link rel="canonical" href="https://irondillo.com/lindale-tyler-cybersecurity.html" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="preconnect" href="https://cdn.tailwindcss.com">
+
+  <!-- Fonts & Tailwind -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
-  <!-- 🛡 Security Headers -->
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.tailwindcss.com https://unpkg.com https://www.google.com https://www.gstatic.com; style-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com https://fonts.googleapis.com; img-src 'self' data:; font-src 'self' https://fonts.gstatic.com; frame-src https://www.google.com; form-action 'self' https://formspree.io; object-src 'none'; base-uri 'self';">
-  <meta http-equiv="X-Content-Type-Options" content="nosniff">
-  <meta http-equiv="X-Frame-Options" content="DENY">
-  <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
-  <meta http-equiv="Permissions-Policy" content="accelerometer=(), camera=(), geolocation=(), microphone=()">
-  <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, max-age=0">
-  <link rel="icon" type="image/x-icon" href="/assets/favicon.png" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            armadilloBlack: "#1A1A1A",
+            armadilloGray: "#4A4A4A",
+            oliveGreen: "#6B7B3C",
+            oliveDark: "#55622F",
+            offWhite: "#F8F9FA"
+          },
+          fontFamily: {
+            inter: ["Inter", "sans-serif"]
+          }
+        }
+      }
+    }
+  </script>
+
   <!-- Open Graph -->
   <meta property="og:title" content="Cybersecurity in Lindale & Tyler, Texas | Iron Dillo" />
   <meta property="og:description" content="Local cyber defense for Lindale and Tyler, Texas businesses. Protect your operations with Iron Dillo." />
   <meta property="og:image" content="https://irondillo.com/assets/irondillo-preview.png" />
   <meta property="og:url" content="https://irondillo.com/lindale-tyler-cybersecurity.html" />
   <meta name="twitter:card" content="summary_large_image" />
-  <script src="https://cdn.tailwindcss.com"></script>
-  tailwind.config = {
-    theme: {
-      extend: {
-        colors: {
-          armadilloBlack: "#1A1A1A",
-          armadilloGray: "#4A4A4A",
-          oliveGreen: "#6B7B3C",
-          oliveDark: "#55622F",
-          offWhite: "#F8F9FA"
-        },
-        fontFamily: {
-          inter: ["Inter", "sans-serif"]
-        }
-      }
-    }
-  };
-</script>
+
   <style>
     @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
     .fade-in { animation: fadeIn 1s ease-out both; }
@@ -56,36 +52,38 @@
   </header>
 
   <!-- Navigation -->
-  <nav class="bg-armadilloGray py-3 rounded-md mb-8 max-w-xl mx-auto fade-in">
-    <div class="flex justify-between">
-      <a href="/index.html" class="text-oliveGreen font-semibold hover:underline px-4 tracking-wide uppercase">Home</a>
-      <a href="/services.html" class="text-oliveGreen font-semibold hover:underline px-4 tracking-wide uppercase">Services</a>
-      <a href="/about.html" class="text-oliveGreen font-semibold hover:underline px-4 tracking-wide uppercase">About</a>
-      <a href="/contact.html" class="text-oliveGreen font-semibold hover:underline px-4 tracking-wide uppercase">Contact</a>
+  <nav class="bg-armadilloBlack py-3 rounded-md mb-8 max-w-xl mx-auto fade-in">
+    <div class="flex justify-between px-4">
+      <a href="/index.html" class="text-offWhite font-semibold hover:text-oliveGreen uppercase">Home</a>
+      <a href="/services.html" class="text-offWhite font-semibold hover:text-oliveGreen uppercase">Services</a>
+      <a href="/about.html" class="text-offWhite font-semibold hover:text-oliveGreen uppercase">About</a>
+      <a href="/contact.html" class="text-offWhite font-semibold hover:text-oliveGreen uppercase">Contact</a>
     </div>
   </nav>
 
+  <!-- Main Content -->
   <main class="flex-grow max-w-3xl mx-auto px-6 py-12 space-y-12 fade-in">
-    <section class="bg-armadilloGray rounded-lg shadow-lg p-8 text-center">
+
+    <section class="bg-white rounded-lg shadow-lg p-8 text-center">
       <h1 class="text-3xl font-bold text-oliveGreen mb-4">Lindale & Tyler Cybersecurity</h1>
-      <p class="text-armadilloGray leading-relaxed">
+      <p class="text-armadilloBlack leading-relaxed">
         Based in Lindale, Iron Dillo Cybersecurity proudly serves nearby Tyler and the surrounding East Texas region.
         I provide hands-on cyber defense, risk assessments, and security training tailored to local small businesses.
       </p>
     </section>
 
-    <section class="bg-armadilloGray rounded-lg shadow-lg p-8">
+    <section class="bg-white rounded-lg shadow-lg p-8">
       <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Why Local Cyber Defense Matters</h2>
-      <p class="text-armadilloGray leading-relaxed">
+      <p class="text-armadilloBlack leading-relaxed">
         From ransomware to phishing, Lindale and Tyler businesses face the same
-        dangers of any large metro area. Working with a nearby partner means quicker response times and a better
+        dangers as any large metro area. Working with a nearby partner means quicker response times and a better
         understanding of your unique challenges.
       </p>
     </section>
 
-    <section class="bg-armadilloGray rounded-lg shadow-lg p-8">
+    <section class="bg-white rounded-lg shadow-lg p-8">
       <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Services for East Texas</h2>
-      <p class="text-armadilloGray leading-relaxed">
+      <p class="text-armadilloBlack leading-relaxed">
         Whether you need a one-time security audit or ongoing support, I offer practical solutions:
       </p>
       <ul class="list-disc list-inside text-armadilloGray mt-4 space-y-2">
@@ -96,18 +94,21 @@
       </ul>
     </section>
 
-    <section class="bg-armadilloBlack py-12 text-center">
-      <h2 class="text-2xl font-bold text-armadilloBlack mb-4">Protect Your Lindale or Tyler Business</h2>
-      <p class="text-armadilloGray max-w-xl mx-auto">
+    <!-- CTA -->
+    <section class="bg-armadilloBlack py-12 text-center rounded-lg shadow-lg">
+      <h2 class="text-2xl font-bold text-offWhite mb-4">Protect Your Lindale or Tyler Business</h2>
+      <p class="text-offWhite max-w-xl mx-auto">
         Let's secure your operations so you can focus on growing your business. Get in touch for a free consultation
         and find out how Iron Dillo can defend your organization.
       </p>
-      <a href="/contact.html" class="mt-6 inline-block bg-oliveGreen text-armadilloBlack px-6 py-3 rounded-lg shadow-lg hover:bg-oliveDark transition">Contact Me Today</a>
+      <a href="/contact.html" class="mt-6 inline-block bg-oliveGreen hover:bg-oliveDark text-white px-6 py-3 rounded-lg shadow-lg transition">
+        Contact Me Today
+      </a>
     </section>
   </main>
 
   <!-- Footer -->
-  <footer class="bg-armadilloGray text-armadilloGray text-center p-6 mt-auto text-sm max-w-3xl mx-auto rounded-md fade-in">
+  <footer class="bg-armadilloBlack text-offWhite text-center p-6 mt-auto text-sm max-w-3xl mx-auto rounded-md fade-in">
     &copy; 2025 Iron Dillo. All rights reserved. | Veteran-Owned |
     <a href="/privacy.html" class="hover:underline text-oliveGreen">Privacy</a> |
     <a href="/terms.html" class="hover:underline text-oliveGreen">Terms</a>
